--- a/package.json
+++ b/package.json
@@ -11,11 +11,20 @@
 	},
 	"dependencies": {
 		"axios": "^1.7.5",
+		"crypto": "^1.0.1",
+		"crypto-js": "^4.2.0",
+		"csrf": "^3.1.0",
+		"dompurify": "^3.2.6",
 		"eslint": "^8.57.0",
 		"eslint-config-next": "14.1.4",
+		"express-validator": "^7.2.1",
 		"formik": "^2.4.6",
 		"framer-motion": "^11.3.30",
+		"isomorphic-dompurify": "^2.25.0",
+		"joi": "^17.13.3",
+		"jose": "^6.0.11",
 		"js-cookie": "^3.0.5",
+		"jsonwebtoken": "^9.0.2",
 		"lodash": "^4.17.21",
 		"next": "^14.2.6",
 		"prop-types": "^15.8.1",
@@ -29,6 +38,7 @@
 		"styled-components": "^6.1.12",
 		"sweetalert2": "^11.6.13",
 		"translate": "^3.0.1",
+		"validator": "^13.15.15",
 		"yup": "^1.4.0"
 	},
 	"devDependencies": {
